# api/swagger.yaml
@@ -6,7 +6,7 @@ info:
   contact:
     email: "citron0137@gmail.com"
 host: "localhost"
-basePath: "/"
+basePath: "/api/"
 schemes:
 - "http"
 paths:
@@ -92,7 +92,9 @@ paths:
           schema:
             $ref: "#/definitions/onError"
   /auth/check:
-    post:
+    get:
+      security:
+      - UserSecurity: []         
       tags:
       - "Auth"
       summary: "check"
@@ -124,6 +126,8 @@ paths:
             $ref: "#/definitions/onError"
   /board:
     post:
+      security:
+      - UserSecurity: []         
       tags:
       - "Board"
       summary: "Create board"
@@ -152,6 +156,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     get:
+      security:
+      - UserSecurity: []         
       tags:
       - "Board"
       summary: "Get boards"
@@ -161,7 +167,7 @@ paths:
       - "application/json"
       parameters:
       - in: "query"
-        name: board_name
+        name: name
         type: string
       responses:
         200:
@@ -174,9 +180,12 @@ paths:
           description: "failed operation"
           schema:
             $ref: "#/definitions/onError"
-  /board/:ix:
+  /board/{board_ix}:
     get:
       tags:
+      - "Board"
+      security:
+      - UserSecurity: []         
       - "Board"
       summary: "Get board"
       description: ""
@@ -198,6 +207,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     put:
+      security:
+      - UserSecurity: []         
       tags:
       - "Board"
       summary: "Get boards"
@@ -228,6 +239,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     delete:
+      security:
+      - UserSecurity: []         
       tags:
       - "Board"
       summary: "delete boards"
@@ -262,6 +275,8 @@ paths:
           
   /post:
     post:
+      security:
+      - UserSecurity: []         
       tags:
       - "Post"
       summary: "Create Post"
@@ -284,7 +299,7 @@ paths:
               type: string
             is_private:
               type: boolean
-            is_commnet:
+            is_comment:
               type: boolean
       responses:
         200:
@@ -296,6 +311,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     get:
+      security:
+      - UserSecurity: []         
       tags:
       - "Post"
       summary: "Get Posts"
@@ -307,6 +324,9 @@ paths:
         - in: "query"
           name: title
           type: string
+        - in: "query"
+          name: board_ix
+          type: number
       responses:
         200:
           description: "successful operation"
@@ -318,8 +338,10 @@ paths:
           description: "failed operation"
           schema:
             $ref: "#/definitions/onError"
-  /post/:ix:
+  /post/{post_ix}:
     get:
+      security:
+      - UserSecurity: []         
       tags:
       - "Post"
       summary: "Get Post"
@@ -329,7 +351,7 @@ paths:
       - "application/json"
       parameters:
       - in: "path"
-        name: board_ix
+        name: post_ix
         type: integer
         required: true
       responses:
@@ -342,6 +364,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     put:
+      security:
+      - UserSecurity: []         
       tags:
       - "Post"
       summary: "Get Post"
@@ -351,7 +375,7 @@ paths:
       - "application/json"
       parameters:
       - in: "path"
-        name: board_ix
+        name: post_ix
         type: integer
         required: true
       - in: "body"
@@ -380,6 +404,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     delete:
+      security:
+      - UserSecurity: []         
       tags:
       - "Post"
       summary: "delete Post"
@@ -389,7 +415,7 @@ paths:
       - "application/json"
       parameters:
       - in: "path"
-        name: board_ix
+        name: post_ix
         type: integer
         required: true
       responses:
@@ -403,6 +429,8 @@ paths:
             $ref: "#/definitions/onError"
   /comment:
     post:
+      security:
+      - UserSecurity: []         
       tags:
       - "Comment"
       summary: "Create Comment"
@@ -426,6 +454,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     get:
+      security:
+      - UserSecurity: []         
       tags:
       - "Comment"
       summary: "Get Comment"
@@ -445,8 +475,10 @@ paths:
           schema:
             $ref: "#/definitions/onError"
             
-  /comment/:ix:
+  /comment/{comment_ix}:
     get:
+      security:
+      - UserSecurity: []         
       tags:
       - "Comment"
       summary: "Get Comment"
@@ -474,6 +506,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     put:
+      security:
+      - UserSecurity: []         
       tags:
       - "Comment"
       summary: "Get Comment"
@@ -501,6 +535,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     delete:
+      security:
+      - UserSecurity: []         
       tags:
       - "Comment"
       summary: "delete Comment"
@@ -524,6 +560,8 @@ paths:
             $ref: "#/definitions/onError"
   /file:
     post:
+      security:
+      - UserSecurity: []         
       tags:
       - "File"
       summary: "Create File"
@@ -547,6 +585,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     get:
+      security:
+      - UserSecurity: []         
       tags:
       - "File"
       summary: "Get Files"
@@ -565,8 +605,10 @@ paths:
           description: "failed operation"
           schema:
             $ref: "#/definitions/onError"
-  /file/:ix:
+  /file/{file_ix}:
     get:
+      security:
+      - UserSecurity: []         
       tags:
       - "File"
       summary: "Get File"
@@ -576,7 +618,7 @@ paths:
       - "application/json"
       parameters:
       - in: "path"
-        name: comment_ix
+        name: file_ix
         type: integer
         required: true
       responses:
@@ -589,6 +631,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     put:
+      security:
+      - UserSecurity: []         
       tags:
       - "File"
       summary: "Get File"
@@ -598,7 +642,7 @@ paths:
       - "application/json"
       parameters:
       - in: "path"
-        name: comment_ix
+        name: file_ix
         type: integer
         required: true
       - in: "body"
@@ -616,6 +660,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     delete:
+      security:
+      - UserSecurity: []         
       tags:
       - "File"
       summary: "delete File"
@@ -625,7 +671,7 @@ paths:
       - "application/json"
       parameters:
       - in: "path"
-        name: comment_ix
+        name: file_ix
         type: integer
         required: true
       responses:
@@ -639,6 +685,8 @@ paths:
             $ref: "#/definitions/onError"
   /vote:
     post:
+      security:
+      - UserSecurity: []         
       tags:
       - "Vote"
       summary: "Create Vote"
@@ -662,6 +710,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     get:
+      security:
+      - UserSecurity: []         
       tags:
       - "Vote"
       summary: "Get Vote"
@@ -681,8 +731,10 @@ paths:
           schema:
             $ref: "#/definitions/onError"
           
-  /vote/:ix:
+  /vote/{vote_ix}:
     get:
+      security:
+      - UserSecurity: []         
       tags:
       - "Vote"
       summary: "Get Vote"
@@ -705,6 +757,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     put:
+      security:
+      - UserSecurity: []         
       tags:
       - "Vote"
       summary: "Get Vote"
@@ -732,6 +786,8 @@ paths:
           schema:
             $ref: "#/definitions/onError"
     delete:
+      security:
+      - UserSecurity: []         
       tags:
       - "Vote"
       summary: "delete Vote"
@@ -754,8 +810,10 @@ paths:
           schema:
             $ref: "#/definitions/onError"
             
-  /vote_item/:ix:
+  /vote_item/{vote_item_ix}:
     put:
+      security:
+      - UserSecurity: []         
       tags:
       - "Vote"
       summary: "Vote_item"
@@ -778,16 +836,6 @@ paths:
           schema:
             $ref: "#/definitions/onError"
           
-          
-securityDefinitions:
-  api_key:
-    type: "apiKey"
-    name: "api_key"
-    in: "header"
-externalDocs:
-  description: "Find out more about Swagger"
-  url: "http://swagger.io"
-  
 definitions : 
   onError:
     properties:
@@ -807,10 +855,10 @@ definitions :
     properties: 
       ix: 
         type: number
-      user_name:
-        type: string
-      board_name:
-        type: string
+      user_ix:
+        type: number
+      board_ix:
+        type: number
       titile:
         type: string
       contents:
@@ -831,7 +879,7 @@ definitions :
         type: number
       post_ix:
         type: number
-      user_name:
+      user_ix:
         type: string
       is_private:
         type: boolean
@@ -847,7 +895,7 @@ definitions :
         type: number
       type:
         type: string
-      user_name:
+      user_ix:
         type: string
       is_private:
         type: boolean
@@ -896,3 +944,18 @@ definitions :
         type: string
       choice_count:
         type: number
+
+        
+securityDefinitions:
+  UserSecurity:
+    type: apiKey
+    in: header
+    name: x-access-token
+    schemes: -http
+security:
+  - UserSecurity: []         
+
+externalDocs:
+  description: "Find out more about Swagger"
+  url: "http://swagger.io"
+  
